blivechat-any.css
/* ... */
yt-live-chat-text-message-renderer #content #message,
yt-live-chat-membership-item-renderer #card #content,
yt-live-chat-paid-message-renderer #card #content {
  border-bottom-left-radius: 120px;
  border-bottom-right-radius: 100px;
  background-color: var(--yt-live-chat-paid-message-secondary-color, --yt-live-chat-sponsor-header-color);
  color: var(--yt-live-chat-paid-message-color,#fff);
  padding-left: 75px;
  min-height: 50px;
  padding-right: 20px;
  padding-top: 15px;
  padding-bottom: 16px;
}

yt-live-chat-paid-message-renderer #card #content {
  padding-left: 60px;
  padding-right: 120px;
}

yt-live-chat-text-message-renderer #image-and-message,
yt-live-chat-text-message-renderer #content #message {
  background-color: var(--sakaban-fish-secondary);
  border-bottom-right-radius: 120px;
  border-bottom-left-radius: 100px;
  font-style: normal !important;
  color: var(--sakaban-fish-message) !important;
  text-decoration: none !important;
  line-height: 30px !important;
  text-align: left;
  letter-spacing: 0px;
  padding-left: 120px;
}

yt-live-chat-text-message-renderer #image-and-message #message {
  padding: 32px;
}

yt-live-chat-text-message-renderer #image-and-message {
  padding-left: 0px;
  min-height: 75px;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;
}

yt-live-chat-membership-item-renderer #card #content {
  background-color: var(--yt-live-chat-sponsor-color);
  color: var(--yt-live-chat-sponsor-color,#fff);
}

yt-live-chat-membership-item-renderer::after {
  background-color: var(--yt-live-chat-sponsor-color);
  content: '';
  display: block;
  width: 100%;
  height: 90px;
  border-bottom-left-radius: 120px;
  border-bottom-right-radius: 100px;
}

[price-level="0"] {
  display: none;
}

yt-img-shadow {
  display: none !important;
}

yt-live-chat-paid-message-renderer[show-only-header] #content.yt-live-chat-paid-message-renderer {
  visibility: visible;
  display: block;
}
yt-live-chat-text-message-renderer {
  overflow: visible;
  display: inline-block;
  margin-right: 100px;
}
#content.yt-live-chat-text-message-renderer {
  min-width: 350px;
}
yt-live-chat-text-message-renderer #content {
  display: flex;
  flex-direction: column;
}

yt-live-chat-author-chip #chat-badges {
  display: flex;
  height: 100%;
  padding-right: 15px;
  align-items: center;
}

yt-live-chat-text-message-renderer #content yt-live-chat-author-chip {
  background-color: var(--sakaban-fish-primary);
  color: white;
  border-top-left-radius: 70px;
  border-top-right-radius: 60px;
  padding: 5px;
  padding-right: 10px;
  margin-right: 0px;
}

yt-live-chat-text-message-renderer[author-type="moderator"] #content yt-live-chat-author-chip,
yt-live-chat-text-message-renderer[author-type="moderator"] #content::after,
yt-live-chat-text-message-renderer[author-type="moderator"] #content::before,
#author-name.yt-live-chat-author-chip[type=moderator],
#author-name.yt-live-chat-author-chip[type=moderator] + #chat-badges {
  background-color: var(--yt-live-chat-moderator-color);
  color: white;
}

yt-live-chat-text-message-renderer[author-type="member"] #content yt-live-chat-author-chip,
yt-live-chat-text-message-renderer[author-type="member"] #content::after,
yt-live-chat-text-message-renderer[author-type="member"] #content::before,
#author-name.yt-live-chat-author-chip[type=member],
#author-name.yt-live-chat-author-chip[type=member] + #chat-badges  {
  background-color: var(--yt-live-chat-sponsor-color);
  color: white;
}

yt-live-chat-text-message-renderer[author-type="owner"] #content yt-live-chat-author-chip,
yt-live-chat-text-message-renderer[author-type="owner"] #content::after,
yt-live-chat-text-message-renderer[author-type="owner"] #content::before,
#author-name.yt-live-chat-author-chip[type=owner],
#author-name.yt-live-chat-author-chip[type=owner] + #chat-badges  {
  background-color: var(--yt-live-chat-owner-color);
  color: white;
}

yt-live-chat-author-badge-renderer[type=moderator] {
  color: white;
}

#author-name.yt-live-chat-author-chip {
  background-color: transparent !important;
}

#message.yt-live-chat-text-message-renderer .emoji.yt-live-chat-text-message-renderer {
  width: auto;
  height: 48px;
}


/* 
yt-live-chat-ticker-paid-message-item-renderer #container #content::before,
yt-live-chat-ticker-paid-message-item-renderer #container #content::after {
  content: "";
  position: absolute;
  border-top-right-radius: 154%;
  border-bottom-left-radius: 300%;
  border-bottom-right-radius: 104%;
  left: 56px;
  top: -9px;
  width: 79px;
  height: 64px;
  background: var(--yt-live-chat-paid-message-primary-color, #1565c0);
  transform: scale(0.25);
  z-index: -1;
}


yt-live-chat-ticker-paid-message-item-renderer #container #content::before {
  transform: scale(0.25) rotateX(180deg);
  top: -25px;
}


yt-live-chat-ticker-paid-message-item-renderer + yt-live-chat-ticker-paid-message-item-renderer {
  margin-left: 15px;
} */

